<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:title="@string/menu_home"
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home" />

        <item
            android:title="@string/menu_about"
            android:id="@+id/menu_about_us"
            android:icon="@drawable/ic_info" />

    </group>

    <item android:title="">
        <menu>

            <item
                android:title="@string/menu_rate"
                android:id="@+id/menu_rate"
                android:icon="@drawable/ic_rate" />

            <item
                android:title="@string/menu_share"
                android:id="@+id/menu_share"
                android:icon="@drawable/ic_share" />
        </menu>
    </item>
</menu>