<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        tools:openDrawer="start">
        <RelativeLayout
            android:id="@+id/layout_webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent">
            <RelativeLayout
                android:id="@+id/layout_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_5"
                android:background="@drawable/bg_gradient_toolbar">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_left_menu"
                    android:layout_width="@dimen/toolbar_custom_icon"
                    android:layout_height="@dimen/toolbar_custom_icon"
                    android:contentDescription="@string/app_name"
                    android:layout_marginRight="@dimen/margin_2"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_menu" />
                <TextView
                    android:id="@+id/txt_toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/img_left_menu"
                    android:layout_toLeftOf="@+id/img_right_menu"
                    android:text="@string/app_name"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/text_size_3xl"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:fontFamily="@font/lato" />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_right_menu"
                    android:layout_width="@dimen/toolbar_custom_icon"
                    android:layout_height="@dimen/toolbar_custom_icon"
                    android:contentDescription="@string/app_name"
                    android:layout_marginLeft="@dimen/margin_2"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_reload" />
            </RelativeLayout>
            <!-- Do not use it, it's make problem in chatbot-->
            <!--android.support.v4.widget.NestedScrollView
                android:id="@+id/scroll_web_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/layout_bar"
                android:fillViewport="true"
                android:fadeScrollbars="false"
                android:scrollbarFadeDuration="0"
                app:layout_behavior= "@string/appbar_scrolling_view_behavior"-->
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/pull_to_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/layout_toolbar"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
                <!--RelativeLayout
                    android:id="@+id/frame_web_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:windowSoftInputMode="adjustResize"-->
                <!--Removed NestedScrollView bottom bar not showing-->
                <!--androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"-->
                    <WebView
                        android:id="@+id/web_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:windowSoftInputMode="adjustResize"/>
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
            <RelativeLayout
                android:id="@+id/layout_no_internet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/layout_toolbar"
                android:visibility="gone"
                android:background="@color/bg_window">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_no_internet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/ic_no_internet" />
                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_whoops"
                    android:layout_below="@+id/img_no_internet"
                    android:layout_marginTop="@dimen/margin_6"
                    android:textSize="35dp"
                    android:textColor="@color/text_ink"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/lato"/>
                <TextView
                    android:id="@+id/txt_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_title"
                    android:layout_marginTop="@dimen/margin_6"
                    android:textSize="18dp"
                    android:textColor="@color/text_primary"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:text="@string/label_noInternet"
                    android:fontFamily="@font/lato"/>
                <Button
                    android:id="@+id/btn_try_again"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/txt_detail"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_button"
                    android:text="@string/label_tryAgain"
                    android:textStyle="bold"
                    android:fontFamily="@font/lato" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layout_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:layout_below="@+id/layout_toolbar"
                android:background="@color/bg_window">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/ic_warning" />
                <TextView
                    android:id="@+id/txt_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_whoops"
                    android:layout_below="@+id/img_error"
                    android:layout_marginTop="@dimen/margin_6"
                    android:textSize="35dp"
                    android:textColor="@color/text_ink"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/lato"/>
                <TextView
                    android:id="@+id/txt_error_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_error"
                    android:layout_marginTop="@dimen/margin_6"
                    android:textSize="18dp"
                    android:textColor="@color/text_primary"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:text="@string/label_error"
                    android:fontFamily="@font/lato"/>
                <Button
                    android:id="@+id/btn_error_try_again"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/txt_error_detail"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_button"
                    android:text="@string/label_tryAgain"
                    android:textStyle="bold"
                    android:fontFamily="@font/lato"/>
                <Button
                    android:id="@+id/btn_error_home"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/btn_error_try_again"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_button"
                    android:text="@string/label_go_home"
                    android:fontFamily="@font/lato"
                    android:textStyle="bold" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layout_progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:layout_below="@+id/layout_toolbar">
                <View
                    android:id="@+id/loader_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black_transparent"/>
                <com.github.ybq.android.spinkit.SpinKitView
                    android:id="@+id/loadingIndicator"
                    android:layout_width="@dimen/home_custom_loader"
                    android:layout_height="@dimen/home_custom_loader"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/margin_2"
                    app:SpinKit_Color="@color/colorAccent"
                    style="@style/SpinKitView.Circle"/>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/layout_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:visibility="gone"
                android:background="@color/transparent"
                android:orientation="vertical"
                android:animateLayoutChanges="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-30dp"
                    android:background="@color/transparent"
                    android:layout_gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_ad_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:tint="@color/colorPrimary"
                        android:fontFamily="@font/lato"
                        app:srcCompat="@drawable/ic_round" />
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_ad_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_1"
                        android:fontFamily="@font/lato"
                        app:srcCompat="@drawable/ic_down_arrow" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_2"
                        android:layout_marginTop="25dp"
                        android:background="@color/bg_window" />
                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/view_admob"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    android:background="@color/bg_window"
                    android:paddingBottom="@dimen/margin_1"
                    android:orientation="horizontal" />
            </LinearLayout>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_3"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_above="@+id/layout_footer"
                android:tint="@color/white"
                android:visibility="gone"
                app:backgroundTint="@color/colorAccent"
                app:srcCompat="@drawable/ic_home"/>
        </RelativeLayout>
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="false"
            app:headerLayout="@layout/navigation_header" />
    </androidx.drawerlayout.widget.DrawerLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
